p2/services.yml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  type: ClusterIP
  selector: app-one
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  type: ClusterIP
  selector: app-two
  ports: 
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  type: ClusterIP
  selector: app-three
  ports:
  - port: 80
    targetPort: 8080
